# sinorstack

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/sinorstack/: cli.py  controllers.py  exceptions.py
src/sinorstack/_template/: .gitignore
src/sinorstack/_template/src/: entrypoint.py  manage.py
src/sinorstack/_template/src/application/: containers.py  exceptions.py
src/sinorstack/_template/src/config/: settings.py
src/sinorstack/_template/src/infrastructure/orm/: apps.py
src/sinorstack/drf/: decorators.py
