[project]
name = "sinorstack"
version = "0.2.0"
description = ""
authors = [
    {name = "shept",email = "github@sinortax.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "copier (>=9.5.0,<10.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "sinorstack", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
sinorstack = "sinorstack.cli:cli"
